schedules POST and DELETE to PUT
